# owop-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: bucket.h  captchastate.h  chat.h  chunk.h  chunksystem.h  client.h  clientoptions.h  color.h  connection.h  constants.h  constexpr_math.h  goapi.h  godef.h  ipinfo.h  netconv.h  networking.h  networking_includes.h  opcodes.h  owopcpp.h  pixel.h  player.h  playerrank.h  serialization.h  server.h  tooltype.h  uuid.h  world.h  worldmanager.h
owop_server/: go.mod  main.go  owop_server.go
owop_server/c_wrapper/: wrapper.go
owop_server/world/: world.go
src/: bucket.cpp  chat.cpp  chunk.cpp  chunksystem.cpp  client.cpp  clientoptions.cpp  color.cpp  connection.cpp  goapi.cpp  ipinfo.cpp  networking.cpp  player.cpp  server.cpp  uuid.cpp  world.cpp  worldmanager.cpp
